[tool.poetry]
name = "bonsai-blender"
version = "0.1.0"
description = ""
authors = ["Thomas Østgulen <tostgulen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12.dev0"
ifcopenshell = "^0.8.0"
bpy = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
